# Policy-Data-Analysis-Python

./: README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: ResultadosPresidenciaMunicipio2018_2024.csv
